// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package google.confidential_match.mrp.backend;

import "protos/mrp/backend/field_match.proto";
import "protos/mrp/backend/job_result_code.proto";

option java_package = "com.google.cm.mrp.backend";
option java_outer_classname = "DataRecordProto";

// This proto represents one record in the input file.
// E.g., in a CSV file one DataRecord corresponds to a single line.
message DataRecord {
  // Represents a single field in the DataRecord with possible value types
  // E.g., in a CSV file, it corresponds to a CSV column.
  message KeyValue {
    string key = 1;

    oneof value {
      string string_value = 2;
      int64 int_value = 3;
      double double_value = 4;
      bool bool_value = 5;
    }
  }

  enum ProtoEncryptionLevel {
    UNSPECIFIED_ENCRYPTION_LEVEL = 0;
    MATCH_KEY_LEVEL = 1;
    ROW_LEVEL = 2;
  }

  // Metadata used during internal processing of DataRecord in MRP.
  message ProcessingMetadata {
    // Whether encryption keys are populated at MatchKey or Row level in
    // proto format.
    ProtoEncryptionLevel protoEncryptionLevel = 1;
  }

  // All output fields to be joined with the values in this data record
  message FieldMatches {
    // Mapping of all original single fields to FieldMatches
    // Key: index of original single field. Value: corresponding FieldMatch to field
    map<uint32, FieldMatch> single_field_record_matches = 1;
    // Mapping of all original composite fields to FieldMatches
    // Key: original composite field group number. Value: corresponding FieldMatch to composite field
    map<uint32, FieldMatch> composite_field_record_matches = 2;
  }

  repeated KeyValue key_values = 2;
  // Map of the encrypted key's position within the KeyValues field to its
  // corresponding encrypted value.
  map<uint32, string> encrypted_key_values = 3;
  optional JobResultCode error_code = 4;
  optional ProcessingMetadata processing_metadata = 5;
  // Field to be joined for Data Record
  optional FieldMatches join_fields = 6;
}
